# pv-eigenverbrauch-analysis

./: LICENSE  compact_analysis.ipynb  estimate-pvgis.ipynb  plot_consumption.ipynb  plot_generation.ipynb  readme.md
package/: battery_simulation.py  pyproject.toml
