[project]
name = "battery_simulation"
version = "0.1.0"
description = "PV and battery simulation for grid independence and self-consumption analysis"
authors = [
    { name = "Benjamin Maier" }
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3",
    "matplotlib>=3.4",
    "numpy>=1.21"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"